src/objects/Template__c.object
<CustomObject>
    <description>Case: Use to store SMS, eDM Name for campaign, eDM for ad hoc request, MMS template name. This object is maintenace by data manager and is used by Ad Hoc and Campaign batch request</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Car_Series__c</fullName>
        <label>Car Series</label>
        <picklist>
            <picklistValues>
                <fullName>A-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CL-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLK-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLS-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GL-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GLK-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ML-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SL-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLK-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMG</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Message_Detail__c</fullName>
        <label>Message Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>e-Brochure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>e-Brochure plus Price List</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Template</label>
    <listViews>
        <fullName>All</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>Message_Detail__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>Campaign_00NN0000000Uqy8MAC</fullName>
        <active>true</active>
        <booleanFilter>(1 AND 2) OR (3 AND 4) OR (5 AND 6)</booleanFilter>
        <field>Campaign.Template__c</field>
        <filterItems>
            <field>$Source.Execution_Type__c</field>
            <operation>equals</operation>
            <value>OB Call</value>
        </filterItems>
        <filterItems>
            <field>Template__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Callscript</value>
        </filterItems>
        <filterItems>
            <field>$Source.Execution_Type__c</field>
            <operation>equals</operation>
            <value>SMS</value>
        </filterItems>
        <filterItems>
            <field>Template__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>SMS</value>
        </filterItems>
        <filterItems>
            <field>$Source.Execution_Type__c</field>
            <operation>equals</operation>
            <value>eDM</value>
        </filterItems>
        <filterItems>
            <field>Template__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>eDM</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Campaign_Template</name>
        <sourceObject>Campaign</sourceObject>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IN0000000Cs0eMAC_00NN0000000Ut43MAC</fullName>
        <active>true</active>
        <field>eDM__c.eDM_Template__c</field>
        <filterItems>
            <field>Template__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>eDM</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>eDM_eDM Template</name>
    </namedFilters>
    <pluralLabel>Templates</pluralLabel>
    <recordTypes>
        <fullName>Callscript</fullName>
        <active>true</active>
        <label>Callscript</label>
    </recordTypes>
    <recordTypes>
        <fullName>SMS</fullName>
        <active>true</active>
        <label>SMS</label>
    </recordTypes>
    <recordTypes>
        <fullName>eDM</fullName>
        <active>true</active>
        <label>eDM</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>